# drone-copilot

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  requirements.txt
backend/src/: config.py  gemini_session.py  main.py  relay.py
backend/src/models/: messages.py  tools.py
client/: requirements.txt
client/demos/: README.md
client/demos/exploration_demo/: session.json
client/demos/inspection_demo/: session.json
client/demos/lego_statue_demo/: session.json
client/demos/open_box_demo/: session.json
client/src/: backend_client.py  config.py  error_handler.py  main.py  tool_handler.py
client/src/audio/: capture.py  playback.py  vad.py
client/src/dashboard/: broadcaster.py  demo_main.py  demo_player.py  recorder.py  server.py
client/src/drone/: command_executor.py  controller.py  exceptions.py  mock_drone.py  safety_guard.py
client/src/mission/: exploration.py  inspection.py  perception_bridge.py
client/src/models/: drone_state.py  messages.py  mission.py  perception.py  tool_calls.py
client/src/perception/: visual.py
deploy/: cloudbuild.yaml
deploy/scripts/: deploy.sh  setup-gcp.sh
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: adk-bidi-demo-reference.md  adk-bidi-streaming-guide.md  codelab-bidi-streaming-agent.md  codelab-multi-agent-monitoring.md  gemini-live-api.md  genmedia-live-app.md  hackathon-resources.md  mcp-genmedia-servers.md  perception-redesign-plan.md
specs/001-drone-copilot/: tasks.md
tests/: validate_live_api.py
(+5 files in other folders)
